--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
   }
 </style>
     
-    <title>Kunal Blog App</title>
+    <title>SAK Blog App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
